--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-extension-boilerplate-react-vite",
-  "version": "0.4.2",
+  "version": "0.0.1",
   "description": "chrome extension boilerplate",
   "license": "MIT",
   "private": true,
@@ -46,6 +46,7 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.20.0",
+    "@google/generative-ai": "^0.22.0",
     "@types/chrome": "0.0.304",
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/eslint__eslintrc": "^2.1.2",
