--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-extension-boilerplate-react-vite",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "chrome extension boilerplate",
   "license": "MIT",
   "private": true,
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-spinners": "^0.15.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
