--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.7.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
@@ -79,6 +79,7 @@
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "run-script-os": "^1.1.6",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1",
