--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ghostery/trackerdb": "^1.0.502",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-google-charts": "^5.2.1",
     "react-spinners": "^0.15.0"
   },
   "devDependencies": {
