--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "module-manager": "pnpm -F module-manager start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@ghostery/trackerdb": "^1.0.502",
+    "@mui/material": "^7.0.2",
+    "@mui/x-charts": "8.0.0-beta.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-spinners": "^0.15.0"
